--- a/assets/sass/post-content-list.sass
+++ b/assets/sass/post-content-list.sass
@@ -8,6 +8,9 @@
     margin-top: $spacing-xs
     font-size: $fontSizes-l
 
+    @media only screen and (max-width: $breakPoints-s)
+      font-size: $fontSizes-m
+
 
   li:before
     position: absolute
