--- a/assets/sass/post.sass
+++ b/assets/sass/post.sass
@@ -44,11 +44,15 @@
 
       @media only screen and (max-width: $breakPoints-s)
         margin-top: $spacing-m
+        font-size: $fontSizes-l
 
     p
       margin-bottom: $spacing-s
       font-size: $fontSizes-l
       line-height: initial
+
+      @media only screen and (max-width: $breakPoints-s)
+        font-size: $fontSizes-m
 
     img
       width: 100%
